made compatible with java source 1.8